--- a/src/web/package.json
+++ b/src/web/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.4",
     "exports-loader": "^0.7.0",
+    "raw-loader": "^0.5.1",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
