--- a/src/web/package.json
+++ b/src/web/package.json
@@ -15,5 +15,8 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "write-file-webpack-plugin": "^4.4.1"
+  },
+  "dependencies": {
+    "mobile-detect": "^1.4.3"
   }
 }
